--- a/package.json
+++ b/package.json
@@ -17,16 +17,24 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@contentful/rich-text-html-renderer": "^16.3.0",
+    "@contentful/rich-text-plain-text-renderer": "^16.0.7",
+    "@fortawesome/free-brands-svg-icons": "^6.4.2",
+    "@fortawesome/free-solid-svg-icons": "^6.4.2",
+    "@fortawesome/react-fontawesome": "^0.2.0",
     "babel-plugin-styled-components": "^2.1.4",
     "dotenv": "^16.3.1",
+    "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-source-contentful": "^8.12.4",
     "gatsby-transformer-sharp": "^5.12.3",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-moment": "^1.1.3",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
