--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,7 @@ jobs:
 
       - name: Install and Build
         run: |
+          rm package-lock.json
           npm install
           npm run build
         env:
