--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
     "gatsby-plugin-image": "^3.12.3",
+    "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-remark-prismjs": "^7.12.0",
