--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "gatsby-plugin-manifest": "^5.12.3",
     "gatsby-plugin-sharp": "^5.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
+    "gatsby-remark-autolink-headers": "^6.12.3",
     "gatsby-remark-prismjs": "^7.12.0",
     "gatsby-source-contentful": "^8.12.4",
     "gatsby-transformer-remark": "^6.12.3",
