--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "dotenv": "^16.3.1",
     "framer-motion": "^10.16.4",
     "gatsby": "^5.12.4",
+    "gatsby-plugin-google-analytics": "^5.12.0",
     "gatsby-plugin-google-tagmanager": "^5.12.3",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
