--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "gatsby-plugin-google-tagmanager": "^5.12.3",
     "gatsby-plugin-image": "^3.12.3",
     "gatsby-plugin-manifest": "^5.12.3",
+    "gatsby-plugin-robots-txt": "^1.8.0",
     "gatsby-plugin-sharp": "^5.12.3",
+    "gatsby-plugin-sitemap": "^6.12.3",
     "gatsby-plugin-styled-components": "^6.12.0",
     "gatsby-remark-autolink-headers": "^6.12.3",
     "gatsby-remark-prismjs": "^7.12.0",
