--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
