--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@tippyjs/react": "^4.2.6",
     "babel-plugin-styled-components": "^2.1.4",
     "cheerio": "^1.0.0-rc.12",
     "dotenv": "^16.3.1",
@@ -46,7 +47,8 @@
     "react-dom": "^18.2.0",
     "react-moment": "^1.1.3",
     "recoil": "^0.7.7",
-    "styled-components": "^6.1.1"
+    "styled-components": "^6.1.1",
+    "tippy.js": "^6.3.7"
   },
   "devDependencies": {
     "@types/node": "^20.3.3",
