--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "description": "moztiq.github.io",
-  "author": "Seongki Kim",
+  "author": "moztiq",
   "keywords": [
     "gatsby"
   ],
